--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,3 +25,138 @@ header{
 .logo{
     font-size: 1.3rem;
 }
+
+body{
+    background-color: #e7e6e6;
+    margin-top: 0px;
+    margin-left: 0px;
+}
+
+.container{
+    width: 1000px;
+    height: 800px;
+    margin: auto;
+    margin-top: 70px;
+    margin-bottom: 40px;
+    background-color: white;
+    border-radius: 7px;
+}
+
+.buttons{
+    display: inline-block;
+    padding-top: 40px;
+    border-bottom: 2px solid #e7e6e6;
+    padding-bottom: 20px;
+    padding-left: 80px;
+    width: 100%;
+}
+
+.blue{
+    background-color: #368bf5;
+    color: white;
+    border: 1px solid white;
+    border-radius: 7px;
+    padding: 8px;
+}
+
+.white{
+    background-color: white;
+    border: 1px solid lightslategray;
+    border-radius: 7px;
+    margin-left: 7px;
+    padding: 8px;
+}
+
+h2{
+    display: inline;
+    margin-left: 10px;
+}
+
+ul{
+    list-style: none;
+    padding-left: inherit;
+}
+
+.v{
+    color: green;
+    border: 1px solid green;
+    border-radius: 50%;
+    padding: 0 6px 0 4px;
+    margin-right: 15px;
+}
+
+.x{
+    color: red;
+    border: 1px solid red;
+    border-radius: 50%;
+    padding: 0 6px 0 6px;
+    margin-right: 15px;
+}
+
+li{
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.list2{
+    margin-top: 40px
+    margin-bottom: 5px
+}
+
+.list{
+    padding: 44px 80px;
+}
+
+.azzurro{
+    margin-left: 20px;
+    font-size: 12px;
+    background-color: rgb(87, 162, 255);
+    color: white;
+    border-radius: 10px;
+    padding: 7px 15px;
+}
+
+.viola{
+    margin-left: 20px;
+    font-size: 12px;
+    background-color: rgb(195, 104, 255);
+    color: white;
+    border-radius: 10px;
+    padding: 7px 15px;
+}
+
+.acqua{
+    margin-left: 20px;
+    font-size: 12px;
+    background-color: rgb(76, 167, 124);
+    color: white;
+    border-radius: 10px;
+    padding: 7px 15px;
+}
+
+.arancione{
+    margin-left: 20px;
+    font-size: 12px;
+    background-color: rgb(250, 161, 28);
+    color: white;
+    border-radius: 10px;
+    padding: 7px 15px;
+}
+
+.fucsia{
+    margin-left: 20px;
+    font-size: 12px;
+    background-color: rgb(241, 54, 201);
+    color: white;
+    border-radius: 10px;
+    padding: 7px 15px;
+}
+
+.verde{
+    margin-left: 20px;
+    font-size: 12px;
+    background-color: rgb(198, 241, 79);
+    color: white;
+    border-radius: 10px;
+    padding: 7px 15px;
+}
